2010-06-16  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #10753: Inconsistency: tab is not supported in the TS editor
	* Fixed issue: #14571: Datastructure: meta > default doesn't work when using static datastructure files (Thanks to Aske Ertmann)

2010-06-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #4512: Would be nice: disallow save without title/name field 
	* Fixed issue: #14386: Static DS - Centralize access to datastructure / pt.1  (Thanks to Michael Klapper)
	* Fixed issue: #14446: disable data preview for section elements 
	* Fixed issue: #3450: Web->Page (TV) shows "fieldname" instead of "title"

2010-06-10  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13346: HTML Validator to indicate that mapping might not succeed 
	* Fixed bug: #14696: mapping module shows error in workspace 
	* Fixed issue: #5457: Clean XML doesn't save changes when using workspaces 
	* Fixed issue: #14694: FlashMessage should be used instead of individual message formats 
	* Fixed issue: #14579: Documentation states hook that has been removed in 2006 

2010-05-31  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14531: TOs Showing up in in other sites when not in their GRSP on multi-domain installation. 
	* Fixed issue: #14548: Call to undefined method tx_templavoila_template::getScope() 

2010-05-30  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13722: Typoscript Object Path gets lost when using Hook for eTypesExtraFormFields TypoScriptObject 
	* Fixed issue: #14226: Mapping TS always makes it HSC=1 // Review eType preset behaviour 
	* Fixed issue: #13950: Page TOs with static DSs show up in all sites and do not honor GRSP

2010-05-18  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14346: External URL with no urltype not shown up (Thanks to Benjamin Mack)
	* Fixed issue: #13079: Followup: Hooks to reprocess lKey and vKey.

2010-05-02  Tolleiv Nietsch <nietsch@aoemedia.de> 
